form-project/styles.css
body {
    width: 100%;
    height: 100vh;
    margin: 0;
    font-family: sans-serif;
    font-size: 16px;
    background-color: #262545;
    color: #f1f1f1;
  }
  
  h1 {
    font-size: 40px;
    font-family: Impact, serif;
    margin: 1.25em auto 0.25em auto;
  }
  
  #description {
    margin: 0 auto;
  }
  
  h1, #description {
    text-align: center;
  }
  
  form {
    width: 60vw;
    min-width: 300px;
    max-width: 450px;
    margin: 0 auto;
    padding: 0;
  }
  
  fieldset {
    border: none;
    margin: 7vh auto 2vh auto;
    padding: 0;
  }
  
  label {
    display: block;
    margin: 0.5rem auto;
  }
  
  input, textarea, select {
    margin: 10px 0 0 0;
    width: 100%;
    min-height: 2em;
    background-color: #f1f1f1;
  }
  
  .inline {
    width: unset;
    margin: -3px 0.5em 0 0;
    vertical-align: middle;
  }
  
  input[type="submit"] {
    display: block;
    height: 2em;
    font-size: 1.1em;
    background-color: #2ee674;
    border: none;
  }
  
  .question {
    margin: 0;
  }

